--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="header-arzchande">
         <p class="date">چهارشنبه ، بیست سوم شهریور ماه</p>
-        <a href="#about" class="logo"><img src="./assets/image/Logo.png" alt="ArzChande-Logo"></a>
+        <a href="#about" class="logo"><img src="./assets/image/LogoV1.png" alt="ArzChande-Logo"></a>
     </header>
 
     <section class="arz">
@@ -49,7 +49,7 @@
                     </div>
                     <div class="moshakhasat-arz">
                         <p class="name-arz">Euro</p>
-                        <p class="mokhtasar-arz">Euro</p>
+                        <p class="mokhtasar-arz">eur</p>
                     </div>
                     <i class="fa-solid fa-caret-up up"></i>
                 </div>
@@ -214,7 +214,7 @@
         </div>
 
         <div class="boxs">
-            <div class="box">
+            <div class="box btc">
                 <div class="head-box">
                     <div class="icon">
                         <img src="./assets/image/Arz/btc.png" alt="">
@@ -228,12 +228,12 @@
                 <div class="price">
                     <div class="gheymat">
                         <p class="price-arz" id="btc-price">$60,000 <sup>دلار</sup></p>
-                        <p class="change-arz">+0.25%</p>
+                        <p class="change-arz" id="btc-today">+0.25%</p>
                     </div>
                     <img src="./assets/image/up.png" alt="UP" class="box-up">
                 </div>
             </div>
-            <div class="box">
+            <div class="box eth">
                 <div class="head-box">
                     <div class="icon">
                         <img src="./assets/image/Arz/eth.png" alt="">
@@ -247,12 +247,12 @@
                 <div class="price">
                     <div class="gheymat">
                         <p class="price-arz" id="eth-price">$60,000 <sup>دلار</sup></p>
-                        <p class="change-arz">+0.25%</p>
+                        <p class="change-arz" id="eth-today">+0.25%</p>
                     </div>
                     <img src="./assets/image/up.png" alt="UP" class="box-up">
                 </div>
             </div>
-            <div class="box">
+            <div class="box bnb">
                 <div class="head-box">
                     <div class="icon">
                         <img src="./assets/image/Arz/bnb.png" alt="">
@@ -266,7 +266,7 @@
                 <div class="price">
                     <div class="gheymat">
                         <p class="price-arz" id="bnb-price">$60,000 <sup>دلار</sup></p>
-                        <p class="change-arz">+0.25%</p>
+                        <p class="change-arz" id="bnb-today">+0.25%</p>
                     </div>
                     <img src="./assets/image/up.png" alt="UP" class="box-up">
                 </div>
@@ -285,7 +285,7 @@
                 <div class="price">
                     <div class="gheymat">
                         <p class="price-arz" id="usdt-price">$60,000 <sup>تومان</sup></p>
-                        <p class="change-arz">+0.25%</p>
+                        <p class="change-arz">+0.00%</p>
                     </div>
                     <img src="./assets/image/up.png" alt="UP" class="box-up">
                 </div>
@@ -293,7 +293,7 @@
         </div>
 
         <div class="boxs2">
-            <div class="box">
+            <div class="box trx">
                 <div class="head-box">
                     <div class="icon">
                         <img src="./assets/image/Arz/trx.png" alt="">
@@ -307,12 +307,12 @@
                 <div class="price">
                     <div class="gheymat">
                         <p class="price-arz" id="trx-price">$60,000 <sup>دلار</sup></p>
-                        <p class="change-arz">+0.25%</p>
+                        <p class="change-arz" id="trx-today">+0.25%</p>
                     </div>
                     <img src="./assets/image/up.png" alt="UP" class="box-up">
                 </div>
             </div>
-            <div class="box">
+            <div class="box doge">
                 <div class="head-box">
                     <div class="icon">
                         <img src="./assets/image/Arz/doge.png" alt="">
@@ -326,12 +326,12 @@
                 <div class="price">
                     <div class="gheymat">
                         <p class="price-arz" id="doge-price">$60,000 <sup>دلار</sup></p>
-                        <p class="change-arz">+0.25%</p>
+                        <p class="change-arz" id="doge-today">+0.25%</p>
                     </div>
                     <img src="./assets/image/up.png" alt="UP" class="box-up">
                 </div>
             </div>
-            <div class="box">
+            <div class="box sol">
                 <div class="head-box">
                     <div class="icon">
                         <img src="./assets/image/Arz/sol.png" alt="">
@@ -345,7 +345,7 @@
                 <div class="price">
                     <div class="gheymat">
                         <p class="price-arz" id="sol-price">$60,000 <sup>دلار</sup></p>
-                        <p class="change-arz">+0.25%</p>
+                        <p class="change-arz" id="sol-today">+0.25%</p>
                     </div>
                     <img src="./assets/image/up.png" alt="UP" class="box-up">
                 </div>
@@ -394,7 +394,7 @@
         </div>
         <div class="main-arz-chande">
             <div class="arz-chande-image">
-                <img src="./assets/image/image1.png" alt="Abour Us">
+                <img src="./assets/image/ArzChande.gif" alt="Abour Us">
             </div>
             <p class="about-us">سلام 👋 چطورید؟! ماهم مثل شما سالها با هزار بدبختی و به نحو های مختلف قیمت دلار و ارز های مختلفو چک میکردیم. خودم که از تهِ تهِ چنل های تلگرام میرفتم قیمت دلارو میدیدم ماشالله ریال ما هم که روز به روز داره میره بالاتر و 
                 حسابی بازار هارو بهم میریزه <span class="auther">:دی</span>
@@ -406,19 +406,19 @@
                 <span class="auther">- محمد رزم پور</span></p>
         </div>
 
-        <div class="ads">
+        <!-- <div class="ads">
             <img src="./assets/image/image2.png" alt="ADS">
-        </div>
+        </div> -->
 
         <div class="social">
             <div class="coffe">
-                <img src="./assets/image/coffe.png" alt="Coffe">
+                <a href="https://www.coffeebede.com/tehranteam"><img src="./assets/image/coffe.png" alt="Coffe"></a>
             </div>
             <div class="pishnahad">
-                <img src="./assets/image/pishnahad.png" alt="Coffe">
+                <a href="https://survey.porsline.ir/s/g3vT8quS"><img src="./assets/image/pishnahad.png" alt="Coffe"></a>
             </div>
             <div class="github">
-                <img src="./assets/image/github.png" alt="Coffe">
+                <a href="https://github.com/RealMamrez/Arz-Chand-Website"><img src="./assets/image/github.png" alt="Coffe"></a>
             </div>
         </div>
     </section>
