Befor changing flex to grid backup ☁️

--- a/index.html
+++ b/index.html
@@ -206,13 +206,226 @@
             <p class="update-show-more">... بزودی</p>
         </div>
     </section>
+
+
+
+
+
+
+
+
+
+
+    <div class="grid-container">
+        <div class="grid-item">
+            <div class="box" id="usd">
+                <div class="head-box">
+                    <div class="icon">
+                        <img src="./assets/image/Arz/USD.png" alt="USD">
+                    </div>
+                    <div class="moshakhasat-arz">
+                        <p class="name-arz">US Dollar</p>
+                        <p class="mokhtasar-arz">USD</p>
+                    </div>
+                    <i class="fa-solid fa-caret-up up"></i>
+                </div>
+                <div class="price">
+                    <div class="gheymat">
+                        <p class="price-arz" id="usd-price">$60,000 <sup>تومان</sup></p>
+                        <p class="change-arz">+0.25%</p>
+                    </div>
+                    <img src="./assets/image/up.png" alt="UP" class="box-up">
+                </div>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="box">
+                <div class="head-box">
+                    <div class="icon">
+                        <img src="./assets/image/Arz/euro.png" alt="">
+                    </div>
+                    <div class="moshakhasat-arz">
+                        <p class="name-arz">Euro</p>
+                        <p class="mokhtasar-arz">eur</p>
+                    </div>
+                    <i class="fa-solid fa-caret-up up"></i>
+                </div>
+                <div class="price">
+                    <div class="gheymat">
+                        <p class="price-arz" id="euro-price">$60,000 <sup>تومان</sup></p>
+                        <p class="change-arz">+0.25%</p>
+                    </div>
+                    <img src="./assets/image/up.png" alt="UP" class="box-up">
+                </div>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="box">
+                <div class="head-box">
+                    <div class="icon">
+                        <img src="./assets/image/Arz/GBP.png" alt="">
+                    </div>
+                    <div class="moshakhasat-arz">
+                        <p class="name-arz">Pound</p>
+                        <p class="mokhtasar-arz">GBP</p>
+                    </div>
+                    <i class="fa-solid fa-caret-up up"></i>
+                </div>
+                <div class="price">
+                    <div class="gheymat">
+                        <p class="price-arz">$60,000 <sup>تومان</sup></p>
+                        <p class="change-arz">+0.25%</p>
+                    </div>
+                    <img src="./assets/image/up.png" alt="UP" class="box-up">
+                </div>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="box">
+                <div class="head-box">
+                    <div class="icon">
+                        <img src="./assets/image/Arz/KWD.png" alt="">
+                    </div>
+                    <div class="moshakhasat-arz">
+                        <p class="name-arz">Dinar</p>
+                        <p class="mokhtasar-arz">KWD</p>
+                    </div>
+                    <i class="fa-solid fa-caret-up up"></i>
+                </div>
+                <div class="price">
+                    <div class="gheymat">
+                        <p class="price-arz">$60,000 <sup>تومان</sup></p>
+                        <p class="change-arz">+0.25%</p>
+                    </div>
+                    <img src="./assets/image/up.png" alt="UP" class="box-up">
+                </div>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="box none">
+                <div class="blur">
+                    <div class="head-box">
+                        <div class="icon">
+                            <img src="./assets/image/Arz/USD.png" alt="">
+                        </div>
+                        <div class="moshakhasat-arz">
+                            <p class="name-arz">None</p>
+                            <p class="mokhtasar-arz">none</p>
+                        </div>
+                        <i class="fa-solid fa-caret-up up"></i>
+                    </div>
+                    <div class="price">
+                        <div class="gheymat">
+                            <p class="price-arz" id="ton-price">$60,000 <sup>تومان</sup></p>
+                            <p class="change-arz">+0.25%</p>
+                        </div>
+                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    </div>
+                </div>
+                <div class="soon">
+                    <p>... بزودی</p>
+                </div>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="box none">
+                <div class="blur">
+                    <div class="head-box">
+                        <div class="icon">
+                            <img src="./assets/image/Arz/USD.png" alt="">
+                        </div>
+                        <div class="moshakhasat-arz">
+                            <p class="name-arz">None</p>
+                            <p class="mokhtasar-arz">none</p>
+                        </div>
+                        <i class="fa-solid fa-caret-up up"></i>
+                    </div>
+                    <div class="price">
+                        <div class="gheymat">
+                            <p class="price-arz" id="ton-price">$60,000 <sup>تومان</sup></p>
+                            <p class="change-arz">+0.25%</p>
+                        </div>
+                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    </div>
+                </div>
+                <div class="soon">
+                    <p>... بزودی</p>
+                </div>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="box none">
+                <div class="blur">
+                    <div class="head-box">
+                        <div class="icon">
+                            <img src="./assets/image/Arz/USD.png" alt="">
+                        </div>
+                        <div class="moshakhasat-arz">
+                            <p class="name-arz">None</p>
+                            <p class="mokhtasar-arz">none</p>
+                        </div>
+                        <i class="fa-solid fa-caret-up up"></i>
+                    </div>
+                    <div class="price">
+                        <div class="gheymat">
+                            <p class="price-arz" id="ton-price">$60,000 <sup>تومان</sup></p>
+                            <p class="change-arz">+0.25%</p>
+                        </div>
+                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    </div>
+                </div>
+                <div class="soon">
+                    <p>... بزودی</p>
+                </div>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="box none">
+                <div class="blur">
+                    <div class="head-box">
+                        <div class="icon">
+                            <img src="./assets/image/Arz/USD.png" alt="">
+                        </div>
+                        <div class="moshakhasat-arz">
+                            <p class="name-arz">None</p>
+                            <p class="mokhtasar-arz">none</p>
+                        </div>
+                        <i class="fa-solid fa-caret-up up"></i>
+                    </div>
+                    <div class="price">
+                        <div class="gheymat">
+                            <p class="price-arz" id="ton-price">$60,000 <sup>تومان</sup></p>
+                            <p class="change-arz">+0.25%</p>
+                        </div>
+                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    </div>
+                </div>
+                <div class="soon">
+                    <p>... بزودی</p>
+                </div>
+            </div>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <section class="crypto">
         <div class="header-section-arz">
             <div class="line line2"></div>
             <p class="title title2">کریپتوکارنسی</p>
             <!-- <div class="under-title-crypto"></div> -->
         </div>
-
         <div class="boxs">
             <div class="box btc">
                 <div class="head-box">
@@ -411,20 +624,20 @@
         </div> -->
 
         <div class="social">
-            <div class="coffe">
+            <div class="coffe" id="A">
                 <a href="https://www.coffeebede.com/tehranteam"><img src="./assets/image/coffe.png" alt="Coffe"></a>
             </div>
-            <div class="pishnahad">
+            <div class="pishnahad" id="B">
                 <a href="https://survey.porsline.ir/s/g3vT8quS"><img src="./assets/image/pishnahad.png" alt="Coffe"></a>
             </div>
-            <div class="github">
+            <div class="github" id="C">
                 <a href="https://github.com/RealMamrez/Arz-Chand-Website"><img src="./assets/image/github.png" alt="Coffe"></a>
             </div>
         </div>
     </section>
 
     <footer>
-        <img src="./assets/image/Footer.png" alt="">
+        <!-- <img src="./assets/image/Footer.png" alt=""> -->
     </footer>
 
     <script src="./assets/js/script.js"></script>
