Adding error card

--- a/index.html
+++ b/index.html
@@ -103,44 +103,54 @@
                 </div>
             </div>
             <div class="grid-item">
-                <div class="box">
-                    <div class="head-box">
-                        <div class="icon">
-                            <img src="./assets/image/Arz/GBP.png" alt="">
+                <div class="box error">
+                    <div class="blur">
+                        <div class="head-box">
+                            <div class="icon">
+                                <img src="./assets/image/Arz/GBP.png" alt="">
+                            </div>
+                            <div class="moshakhasat-arz">
+                                <p class="name-arz">Pound</p>
+                                <p class="mokhtasar-arz">GBP</p>
+                            </div>
+                            <i class="fa-solid fa-caret-up up"></i>
                         </div>
-                        <div class="moshakhasat-arz">
-                            <p class="name-arz">Pound</p>
-                            <p class="mokhtasar-arz">GBP</p>
+                        <div class="price">
+                            <div class="gheymat">
+                                <p class="price-arz">$60,000 <sup>تومان</sup></p>
+                                <p class="change-arz">+0.25%</p>
+                            </div>
+                            <img src="./assets/image/up.png" alt="UP" class="box-up">
                         </div>
-                        <i class="fa-solid fa-caret-up up"></i>
                     </div>
-                    <div class="price">
-                        <div class="gheymat">
-                            <p class="price-arz">$60,000 <sup>تومان</sup></p>
-                            <p class="change-arz">+0.25%</p>
-                        </div>
-                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    <div class="popup">
+                        <p>! اختلال در ارتباط با سرویس</p>
                     </div>
                 </div>
             </div>
             <div class="grid-item">
-                <div class="box">
-                    <div class="head-box">
-                        <div class="icon">
-                            <img src="./assets/image/Arz/AED.png" alt="">
+                <div class="box error">
+                    <div class="blur">
+                        <div class="head-box">
+                            <div class="icon">
+                                <img src="./assets/image/Arz/AED.png" alt="">
+                            </div>
+                            <div class="moshakhasat-arz">
+                                <p class="name-arz">Emarat</p>
+                                <p class="mokhtasar-arz">AED</p>
+                            </div>
+                            <i class="fa-solid fa-caret-up up"></i>
                         </div>
-                        <div class="moshakhasat-arz">
-                            <p class="name-arz">Emarat</p>
-                            <p class="mokhtasar-arz">AED</p>
+                        <div class="price">
+                            <div class="gheymat">
+                                <p class="price-arz">$60,000 <sup>تومان</sup></p>
+                                <p class="change-arz">+0.25%</p>
+                            </div>
+                            <img src="./assets/image/up.png" alt="UP" class="box-up">
                         </div>
-                        <i class="fa-solid fa-caret-up up"></i>
                     </div>
-                    <div class="price">
-                        <div class="gheymat">
-                            <p class="price-arz">$60,000 <sup>تومان</sup></p>
-                            <p class="change-arz">+0.25%</p>
-                        </div>
-                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    <div class="popup">
+                        <p>! اختلال در ارتباط با سرویس</p>
                     </div>
                 </div>
             </div>
