--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid-item">
+            <!-- <div class="grid-item">
                 <div class="box none">
                     <div class="blur">
                         <div class="head-box">
@@ -247,7 +247,7 @@
                         </div>
                         <div class="price">
                             <div class="gheymat">
-                                <p class="price-arz" id="ton-price">$60,000 <sup>تومان</sup></p>
+                                <p class="price-arz">$60,000 <sup>تومان</sup></p>
                                 <p class="change-arz">+0.25%</p>
                             </div>
                             <img src="./assets/image/up.png" alt="UP" class="box-up">
@@ -257,11 +257,11 @@
                         <p>... بزودی</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
           </div>
 
         <div class="show-more-less">
-            <p class="show-more">نمایش بیشتر</p>
+            <p class="show-more" id="show-more1">نمایش بیشتر</p>
             <i class="fa-solid fa-chevron-down show-more-icon"></i>
             <p class="update-show-more">... درحال توسعه</p>
         </div>
@@ -449,7 +449,7 @@
           </div>
 
           <div class="show-more-less">
-            <p class="show-more">نمایش بیشتر</p>
+            <p class="show-more" id="show-more2">نمایش بیشتر</p>
             <i class="fa-solid fa-chevron-down show-more-icon"></i>
             <p class="update-show-more">... درحال توسعه</p>
         </div>
