Some bug fixing & Responsive

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header class="header-arzchande">
-        <!-- <p class="date">چهارشنبه ، بیست سوم شهریور ماه</p> -->
+        <p class="date"></p>
         <a href="#about" class="logo"><img src="./assets/image/LogoV1.png" alt="ArzChande-Logo"></a>
     </header>
 
@@ -49,7 +49,7 @@
 
 
 
-        <div class="grid-container">
+        <div class="grid-container arz">
             <div class="grid-item">
                 <div class="box error" id="usd">
                     <div class="blur">
@@ -260,12 +260,13 @@
             </div> -->
           </div>
 
-        <div class="show-more-less">
+        <div class="show-more-less arz">
             <p class="show-more" id="show-more1">نمایش بیشتر</p>
             <i class="fa-solid fa-chevron-down show-more-icon"></i>
             <p class="update-show-more">... درحال توسعه</p>
         </div>
     </section>
+    <div class="updating">... این بخش درحال توسعه است</div>
     <section class="crypto">
         <div class="header-section-arz">
             <div class="line line2"></div>
@@ -470,7 +471,7 @@
                 سرتون رو درد نیارم <span class="auther">اَرز چَندِ </span>یک پلتفرمه خیلی ساده و کامله که هروقت خواستی ببینی چقدر وضع اقتصادیمون بده سه سوته ببینی چقدر بده :))
                 <br>
                 جیبتون پر پول
-                <br>
+                <br><br>
                 <span class="auther">- محمد رزم پور</span></p>
         </div>
 
