--- a/index.html
+++ b/index.html
@@ -449,9 +449,184 @@
             </div>                
           </div>
 
-          <div class="show-more-less">
+
+
+          <div class="grid-container hidden-i">
+            <div class="grid-item">
+                <div class="box xrp">
+                    <div class="head-box">
+                        <div class="icon">
+                            <img src="./assets/image/Arz/xrp.png" alt="">
+                        </div>
+                        <div class="moshakhasat-arz">
+                            <p class="name-arz">Xrp</p>
+                            <p class="mokhtasar-arz">xrp</p>
+                        </div>
+                        <i class="fa-solid fa-caret-up up"></i>
+                    </div>
+                    <div class="price">
+                        <div class="gheymat">
+                            <p class="price-arz" id="xrp-price">$60,000 <sup>دلار</sup></p>
+                            <p class="change-arz" id="xrp-today">+0.25%</p>
+                        </div>
+                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="box ada">
+                    <div class="head-box">
+                        <div class="icon">
+                            <img src="./assets/image/Arz/ada.png" alt="">
+                        </div>
+                        <div class="moshakhasat-arz">
+                            <p class="name-arz">Cardano</p>
+                            <p class="mokhtasar-arz">ADA</p>
+                        </div>
+                        <i class="fa-solid fa-caret-up up"></i>
+                    </div>
+                    <div class="price">
+                        <div class="gheymat">
+                            <p class="price-arz" id="ada-price">$60,000 <sup>دلار</sup></p>
+                            <p class="change-arz" id="ada-today">+0.25%</p>
+                        </div>
+                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="box avax">
+                    <div class="head-box">
+                        <div class="icon">
+                            <img src="./assets/image/Arz/avax.png" alt="">
+                        </div>
+                        <div class="moshakhasat-arz">
+                            <p class="name-arz">Avalanche</p>
+                            <p class="mokhtasar-arz">AVAX</p>
+                        </div>
+                        <i class="fa-solid fa-caret-up up"></i>
+                    </div>
+                    <div class="price">
+                        <div class="gheymat">
+                            <p class="price-arz" id="avax-price">$60,000 <sup>دلار</sup></p>
+                            <p class="change-arz" id="avax-today">+0.25%</p>
+                        </div>
+                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    </div>
+                </div>
+            </div>  
+            <div class="grid-item">
+                <div class="box shib">
+                    <div class="head-box">
+                        <div class="icon">
+                            <img src="./assets/image/Arz/shib.png" alt="">
+                        </div>
+                        <div class="moshakhasat-arz">
+                            <p class="name-arz">Shiba</p>
+                            <p class="mokhtasar-arz">Shib</p>
+                        </div>
+                        <i class="fa-solid fa-caret-up up"></i>
+                    </div>
+                    <div class="price">
+                        <div class="gheymat">
+                            <p class="price-arz shib" id="shib-price">$60,000 <sup>دلار</sup></p>
+                            <p class="change-arz" id="shib-today">+0.25%</p>
+                        </div>
+                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="box link">
+                    <div class="head-box">
+                        <div class="icon">
+                            <img src="./assets/image/Arz/link.png" alt="">
+                        </div>
+                        <div class="moshakhasat-arz">
+                            <p class="name-arz">Chainlink</p>
+                            <p class="mokhtasar-arz">LINK</p>
+                        </div>
+                        <i class="fa-solid fa-caret-up up"></i>
+                    </div>
+                    <div class="price">
+                        <div class="gheymat">
+                            <p class="price-arz" id="link-price">$60,000 <sup>دلار</sup></p>
+                            <p class="change-arz" id="link-today">+0.25%</p>
+                        </div>
+                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="box bch">
+                    <div class="head-box">
+                        <div class="icon">
+                            <img src="./assets/image/Arz/bch.png" alt="">
+                        </div>
+                        <div class="moshakhasat-arz">
+                            <p class="name-arz">Bitcoin Cash</p>
+                            <p class="mokhtasar-arz">bch</p>
+                        </div>
+                        <i class="fa-solid fa-caret-up up"></i>
+                    </div>
+                    <div class="price">
+                        <div class="gheymat">
+                            <p class="price-arz" id="bch-price">$60,000 <sup>دلار</sup></p>
+                            <p class="change-arz" id="bch-today">+0.25%</p>
+                        </div>
+                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    </div>
+                </div>
+            </div>  
+            <div class="grid-item">
+                <div class="box ltc">
+                    <div class="head-box">
+                        <div class="icon">
+                            <img src="./assets/image/Arz/ltc.png" alt="">
+                        </div>
+                        <div class="moshakhasat-arz">
+                            <p class="name-arz">Litecoin</p>
+                            <p class="mokhtasar-arz">ltc</p>
+                        </div>
+                        <i class="fa-solid fa-caret-up up"></i>
+                    </div>
+                    <div class="price">
+                        <div class="gheymat">
+                            <p class="price-arz" id="ltc-price">$60,000 <sup>دلار</sup></p>
+                            <p class="change-arz" id="ltc-today">+0.25%</p>
+                        </div>
+                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="box dot">
+                    <div class="head-box">
+                        <div class="icon">
+                            <img src="./assets/image/Arz/dot.png" alt="">
+                        </div>
+                        <div class="moshakhasat-arz">
+                            <p class="name-arz">Polkadot</p>
+                            <p class="mokhtasar-arz">dot</p>
+                        </div>
+                        <i class="fa-solid fa-caret-up up"></i>
+                    </div>
+                    <div class="price">
+                        <div class="gheymat">
+                            <p class="price-arz" id="dot-price">$60,000 <sup>دلار</sup></p>
+                            <p class="change-arz" id="dot-today">+0.25%</p>
+                        </div>
+                        <img src="./assets/image/up.png" alt="UP" class="box-up">
+                    </div>
+                </div>
+            </div>                
+          </div>
+
+          
+
+          <div class="show-more-less" onclick="showMoreCrypto()">
             <p class="show-more" id="show-more2">نمایش بیشتر</p>
-            <i class="fa-solid fa-chevron-down show-more-icon"></i>
+            <i class="fa-solid fa-chevron-down show-more-icon icon2"></i>
             <p class="update-show-more">... درحال توسعه</p>
         </div>
     </section>
