--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/eb887e5453.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>ArzChande | اَرز چَندِ</title>
+    <link rel="shortcut icon" href="./assets/image/icon.png" type="image/png">
 </head>
 <body>
 
