Get API every 12h and some bug ficing in .v

--- a/index.html
+++ b/index.html
@@ -652,14 +652,14 @@
         </div>
 
         <div class="social">
-            <div class="coffe" id="A">
-                <a href="https://www.coffeebede.com/tehranteam"><img src="./assets/image/coffe.png" alt="Coffe"></a>
+            <div class="coffe">
+                <a href="https://www.coffeebede.com/tehranteam"><img id="A" src="./assets/image/coffe.png" alt="Coffe"></a>
             </div>
-            <div class="pishnahad" id="B">
-                <a href="https://survey.porsline.ir/s/g3vT8quS"><img src="./assets/image/pishnahad.png" alt="Coffe"></a>
+            <div class="pishnahad">
+                <a href="https://survey.porsline.ir/s/g3vT8quS"><img id="B" src="./assets/image/pishnahad.png" alt="Coffe"></a>
             </div>
-            <div class="github" id="C">
-                <a href="https://github.com/RealMamrez/Arz-Chand-Website"><img src="./assets/image/github.png" alt="Coffe"></a>
+            <div class="github">
+                <a href="https://github.com/RealMamrez/Arz-Chand-Website"><img id="C" src="./assets/image/github.png" alt="Coffe"></a>
             </div>
         </div>
     </section>
